Remove lint warnings from parse/node.go

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "erroozle",
         "errp",
         "etyp",
+        "identifier's",
         "nt's",
         "structs",
         "tmpl",
