--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
         "Chtml",
+        "Errorf",
         "Failf",
+        "Funcs",
         "Fwww",
         "Iface",
         "Ione",
